# PyFJCore

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-wheels.yml
pyfjcore/: PyFJCoreExtensions.hh  __init__.py  fjcore.cc  fjcore.hh  pyfjcore.cpp  pyfjcore.py
pyfjcore/swig/: numpy.i  numpy_helpers.i  pyfjcore.i
scripts/: clean.sh  pypi-upload.sh
