[metadata]

name = PyFJCore
description = Python wrapper of FastJet Core functionality with NumPy support
author = Patrick T. Komiske III
author_email = pkomiske@mit.edu
license = GPL-3.0
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pkomiske/PyFJCore
keywords =
    fastjet
    fjcore
    numpy
    swig

[options]

packages = find:
zip_safe = False

python_requires =
    >= 2.7

install_requires =
    numpy >= 1.12.0
